--- a/www/style.css
+++ b/www/style.css
@@ -1,13 +1,50 @@
 html {
-    margin: 15px 10px;
+    --font-scale:0.5;
+    margin: 1vw 1vw;
+}
+
+body {
+    margin: 1vw 1vw;
+}
+
+div {
+    padding: 2vw;
+}
+
+html * {
     font-family: sans-serif;
-    font-size: 3.2vw;
+    font-size: calc(var(--font-scale) * 4vw);
+}
+
+h1 {
+    font-size: calc(var(--font-scale) * 10vw);
+}
+
+h2 {
+    font-size: calc(var(--font-scale) * 9vw);
+}
+
+
+h3 {
+    font-size: calc(var(--font-scale) * 8vw);
+}
+
+
+h4 {
+    font-size: calc(var(--font-scale) * 7vw);
+}
+
+h5 {
+    font-size: calc(var(--font-scale) * 6vw);
+}
+
+h6 {
+    font-size: calc(var(--font-scale) * 5vw);
 }
 
 form {
     font-size: 2.5vw;
-    width: 50vw;
-    height: 30vw;
+    width: 30vw;
 }
 
 input[type="text"], input[type="password"] {
@@ -29,3 +66,18 @@ form div {
 .error {
     color:red;
 }
+
+.success {
+    color:green;
+}
+
+div#top-bar {
+
+}
+
+div#top-bar * {
+    margin:0;
+    padding: 0px;
+    
+}
+
